--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
             <div class="logo">BeatSocial</div>
             <nav>
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="#" class="nav-link active">Dashboard</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Content</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Schedule</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Analytics</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Settings</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link" active>Dashboard</a></li>
+                    <li class="nav-item"><a href="create.html" class="nav-link">Content</a></li>
+                    <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
+                    <li class="nav-item"><a href="analytics.html" class="nav-link">Analytics</a></li>
+                    <li class="nav-item"><a href="settings.html" class="nav-link">Settings</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,25 +28,25 @@
         <aside class="sidebar">
             <ul class="sidebar-menu">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link active">
+                    <a href="index.html" class="sidebar-link" active>
                         <i class="fas fa-home sidebar-icon"></i>
                         Dashboard
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="create.html" class="sidebar-link">
                         <i class="fas fa-edit sidebar-icon"></i>
                         Create Content
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="schedule.html" class="sidebar-link">
                         <i class="fas fa-calendar-alt sidebar-icon"></i>
                         Schedule Posts
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="analytics.html" class="sidebar-link">
                         <i class="fas fa-chart-line sidebar-icon"></i>
                         Analytics
                     </a>
@@ -58,7 +58,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="settings.html" class="sidebar-link">
                         <i class="fas fa-cog sidebar-icon"></i>
                         Settings
                     </a>
