--- a/public/schedule.html
+++ b/public/schedule.html
@@ -16,7 +16,7 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html" class="nav-link">Dashboard</a></li>
                     <li class="nav-item"><a href="create.html" class="nav-link">Content</a></li>
-                    <li class="nav-item"><a href="schedule.html" class="nav-link active">Schedule</a></li>
+                    <li class="nav-item"><a href="schedule.html" class="nav-link" active>Schedule</a></li>
                     <li class="nav-item"><a href="analytics.html" class="nav-link">Analytics</a></li>
                     <li class="nav-item"><a href="settings.html" class="nav-link">Settings</a></li>
                 </ul>
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="schedule.html" class="sidebar-link active">
+                    <a href="schedule.html" class="sidebar-link" active>
                         <i class="fas fa-calendar-alt sidebar-icon"></i>
                         Schedule Posts
                     </a>
