--- a/public/analytics.html
+++ b/public/analytics.html
@@ -17,7 +17,7 @@
                     <li class="nav-item"><a href="index.html" class="nav-link">Dashboard</a></li>
                     <li class="nav-item"><a href="create.html" class="nav-link">Content</a></li>
                     <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
-                    <li class="nav-item"><a href="analytics.html" class="nav-link active">Analytics</a></li>
+                    <li class="nav-item"><a href="analytics.html" class="nav-link" active>Analytics</a></li>
                     <li class="nav-item"><a href="settings.html" class="nav-link">Settings</a></li>
                 </ul>
             </nav>
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="analytics.html" class="sidebar-link active">
+                    <a href="analytics.html" class="sidebar-link" active>
                         <i class="fas fa-chart-line sidebar-icon"></i>
                         Analytics
                     </a>
