--- a/public/create.html
+++ b/public/create.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html" class="nav-link">Dashboard</a></li>
-                    <li class="nav-item"><a href="create.html" class="nav-link active">Content</a></li>
+                    <li class="nav-item"><a href="create.html" class="nav-link" active>Content</a></li>
                     <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
                     <li class="nav-item"><a href="analytics.html" class="nav-link">Analytics</a></li>
                     <li class="nav-item"><a href="settings.html" class="nav-link">Settings</a></li>
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="create.html" class="sidebar-link active">
+                    <a href="create.html" class="sidebar-link" active>
                         <i class="fas fa-edit sidebar-icon"></i>
                         Create Content
                     </a>
