--- a/public/settings.html
+++ b/public/settings.html
@@ -18,7 +18,7 @@
                     <li class="nav-item"><a href="create.html" class="nav-link">Content</a></li>
                     <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
                     <li class="nav-item"><a href="analytics.html" class="nav-link">Analytics</a></li>
-                    <li class="nav-item"><a href="settings.html" class="nav-link active">Settings</a></li>
+                    <li class="nav-item"><a href="settings.html" class="nav-link" active>Settings</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-toggle">
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="settings.html" class="sidebar-link active">
+                    <a href="settings.html" class="sidebar-link" active>
                         <i class="fas fa-cog sidebar-icon"></i>
                         Settings
                     </a>
