--- a/public/create.html
+++ b/public/create.html
@@ -233,5 +233,6 @@
 
     <script src="/js/dashboard.js"></script>
     <script src="/js/content-creator.js"></script>
+    <script src="/js/ai-visual-generator.js"></script>
 </body>
 </html>
